// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryCount can render when count is 0 when \`hideIfEmpty\` is false 1`] = `
<div
  className="query-count inline"
>
  <span>
    (
  </span>
  <span
    className="query-count-value"
  >
    0
  </span>
  <span>
    )
  </span>
</div>
`;

exports[`QueryCount displays count when count < max 1`] = `
<div
  className="query-count inline"
>
  <span>
    (
  </span>
  <span
    className="query-count-value"
  >
    5
  </span>
  <span>
    )
  </span>
</div>
`;

exports[`QueryCount displays count when no max 1`] = `
<div
  className="query-count inline"
>
  <span>
    (
  </span>
  <span
    className="query-count-value"
  >
    5
  </span>
  <span>
    )
  </span>
</div>
`;

exports[`QueryCount displays max count if count >= max 1`] = `
<div
  className="query-count inline"
>
  <span>
    (
  </span>
  <span
    className="query-count-value"
  >
    500+
  </span>
  <span>
    )
  </span>
</div>
`;

exports[`QueryCount does not render if count is 0 1`] = `""`;
